Polish: Rename products, reorder navigation, move Tools section

--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
                     class="text-sm font-medium text-text-muted hover:text-primary transition-colors">Wyzwania</a>
                 <a href="#services"
                     class="text-sm font-medium text-text-muted hover:text-primary transition-colors">Rozwiązania</a>
-                <a href="#tools"
-                    class="text-sm font-medium text-text-muted hover:text-primary transition-colors">Narzędzia</a>
                 <a href="#case-studies"
                     class="text-sm font-medium text-text-muted hover:text-primary transition-colors">Realizacje</a>
+                <a href="#tools"
+                    class="text-sm font-medium text-text-muted hover:text-primary transition-colors">Narzędzia</a>
                 <a href="#pricing"
                     class="text-sm font-medium text-text-muted hover:text-primary transition-colors">Cennik</a>
                 <a href="en/index.html" class="flex items-center gap-2 transition-transform hover:scale-110"
@@ -126,8 +126,8 @@
         </button>
         <a href="#problem" class="mobile-link text-2xl font-display font-medium text-text-main">Wyzwania</a>
         <a href="#services" class="mobile-link text-2xl font-display font-medium text-text-main">Rozwiązania</a>
-        <a href="#tools" class="mobile-link text-2xl font-display font-medium text-text-main">Narzędzia</a>
         <a href="#case-studies" class="mobile-link text-2xl font-display font-medium text-text-main">Realizacje</a>
+        <a href="#tools" class="mobile-link text-2xl font-display font-medium text-text-main">Narzędzia</a>
         <a href="#pricing" class="mobile-link text-2xl font-display font-medium text-text-main">Cennik</a>
         <a href="en/index.html"
             class="mobile-link flex items-center gap-2 text-text-muted hover:text-primary transition-colors">
@@ -649,94 +649,7 @@
         </div>
     </section>
 
-    <!-- Our Tools Section -->
-    <section id="tools" class="py-24 bg-gray-50 border-t border-gray-100">
-        <div class="max-w-7xl mx-auto px-6">
-            <div class="text-center mb-16">
-                <h2 class="text-3xl md:text-5xl font-display font-bold mb-6 text-text-main">
-                    Nasze Narzędzia
-                </h2>
-                <p class="text-text-muted max-w-2xl mx-auto">
-                    Specjalistyczne narzędzia zaprojektowane do automatyzacji Twoich finansów i operacji.
-                </p>
-            </div>
 
-            <div class="grid md:grid-cols-2 gap-8">
-                <!-- Fluinty Debt -->
-                <div
-                    class="group relative bg-white rounded-3xl p-8 border border-gray-100 shadow-soft hover:shadow-lg transition-all overflow-hidden">
-                    <div class="absolute top-0 right-0 p-8 opacity-5 group-hover:opacity-10 transition-opacity">
-                        <i data-lucide="shield-check" class="w-32 h-32 text-primary"></i>
-                    </div>
-
-                    <div class="relative z-10">
-                        <div class="w-14 h-14 bg-primary/10 rounded-2xl flex items-center justify-center mb-6">
-                            <i data-lucide="shield-check" class="w-7 h-7 text-primary"></i>
-                        </div>
-
-                        <h3 class="text-2xl font-bold text-text-main mb-3">Fluinty Debt</h3>
-                        <div class="space-y-4 mb-8">
-                            <p class="text-text-muted leading-relaxed">
-                                <strong>Zamień stres na gotówkę.</strong> Fluinty Debt to Twój automatyczny strażnik
-                                płynności finansowej, który pracuje 24/7, by Twoje faktury były opłacane na czas.
-                            </p>
-                            <p class="text-text-muted leading-relaxed">
-                                System integruje się z KSeF, wykrywa opóźnienia i samoczynnie uruchamia proces
-                                windykacji. Kulturalne SMS-y, stanowcze maile i inteligentny VoiceBot wyręczają Cię w
-                                najtrudniejszych rozmowach.
-                            </p>
-                            <ul class="text-sm text-text-muted space-y-2">
-                                <li class="flex items-center gap-2"><i data-lucide="check"
-                                        class="w-4 h-4 text-primary"></i> <strong>Odzyskuj należności 40%
-                                        szybciej</strong></li>
-                                <li class="flex items-center gap-2"><i data-lucide="check"
-                                        class="w-4 h-4 text-primary"></i> <strong>Oszczędzaj 10h miesięcznie</strong> na
-                                    telefonach</li>
-                                <li class="flex items-center gap-2"><i data-lucide="check"
-                                        class="w-4 h-4 text-primary"></i> <strong>Jeden abonament</strong> zamiast
-                                    prowizji dla windykatora</li>
-                            </ul>
-                        </div>
-
-                        <a href="pages/fluinty-debt.html"
-                            class="inline-flex items-center gap-2 text-primary font-bold group-hover:gap-3 transition-all">
-                            Zobacz Więcej <i data-lucide="arrow-right" class="w-5 h-5"></i>
-                        </a>
-                    </div>
-                </div>
-
-                <!-- Fluinty Fleet Manager -->
-                <div
-                    class="group relative bg-white rounded-3xl p-8 border border-gray-100 shadow-soft hover:shadow-lg transition-all overflow-hidden">
-                    <div class="absolute top-0 right-0 p-8 opacity-5 group-hover:opacity-10 transition-opacity">
-                        <i data-lucide="truck" class="w-32 h-32 text-accent"></i>
-                    </div>
-
-                    <div class="relative z-10">
-                        <div class="flex justify-between items-start mb-6">
-                            <div class="w-14 h-14 bg-accent/10 rounded-2xl flex items-center justify-center">
-                                <i data-lucide="truck" class="w-7 h-7 text-accent"></i>
-                            </div>
-                            <span
-                                class="px-3 py-1 bg-gray-100 text-gray-500 text-xs font-bold rounded-full uppercase tracking-wide">
-                                Wkrótce
-                            </span>
-                        </div>
-
-                        <h3 class="text-2xl font-bold text-text-main mb-3">Fluinty Fleet Manager</h3>
-                        <p class="text-text-muted mb-8 leading-relaxed">
-                            Kompleksowe zarządzanie flotą pojazdów. Monitoruj koszty, trasy i serwisy w jednym,
-                            intuicyjnym dashboardzie.
-                        </p>
-
-                        <span class="inline-flex items-center gap-2 text-gray-400 font-bold cursor-not-allowed">
-                            Coming Soon
-                        </span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <!-- Process Section -->
     <section class="py-24 relative">
@@ -1067,6 +980,97 @@
                     </div>
 
 
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Our Tools Section -->
+    <section id="tools" class="py-24 bg-gray-50 border-t border-gray-100">
+        <div class="max-w-7xl mx-auto px-6">
+            <div class="text-center mb-16">
+                <h2 class="text-3xl md:text-5xl font-display font-bold mb-6 text-text-main">
+                    Nasze Narzędzia
+                </h2>
+                <p class="text-text-muted max-w-2xl mx-auto">
+                    Specjalistyczne narzędzia zaprojektowane do automatyzacji Twoich finansów i operacji.
+                </p>
+            </div>
+
+            <div class="grid md:grid-cols-2 gap-8">
+                <!-- Fluinty Debt -->
+                <div
+                    class="group relative bg-white rounded-3xl p-8 border border-gray-100 shadow-soft hover:shadow-lg transition-all overflow-hidden">
+                    <div class="absolute top-0 right-0 p-8 opacity-5 group-hover:opacity-10 transition-opacity">
+                        <i data-lucide="shield-check" class="w-32 h-32 text-primary"></i>
+                    </div>
+
+                    <div class="relative z-10">
+                        <div class="w-14 h-14 bg-primary/10 rounded-2xl flex items-center justify-center mb-6">
+                            <i data-lucide="shield-check" class="w-7 h-7 text-primary"></i>
+                        </div>
+
+                        <h3 class="text-2xl font-bold text-text-main mb-3">FluintyDebt</h3>
+                        <div class="space-y-4 mb-8">
+                            <p class="text-text-muted leading-relaxed">
+                                <strong>Zamień stres na gotówkę.</strong> FluintyDebt to Twój automatyczny strażnik
+                                płynności finansowej, który pracuje 24/7, by Twoje faktury były opłacane na czas.
+                            </p>
+                            <p class="text-text-muted leading-relaxed">
+                                System integruje się z KSeF, wykrywa opóźnienia i samoczynnie uruchamia proces
+                                windykacji. Kulturalne SMS-y, stanowcze maile i inteligentny VoiceBot wyręczają Cię w
+                                najtrudniejszych rozmowach.
+                            </p>
+                            <ul class="text-sm text-text-muted space-y-2">
+                                <li class="flex items-center gap-2"><i data-lucide="check"
+                                        class="w-4 h-4 text-primary"></i> <strong>Odzyskuj należności 40%
+                                        szybciej</strong></li>
+                                <li class="flex items-center gap-2"><i data-lucide="check"
+                                        class="w-4 h-4 text-primary"></i> <strong>Oszczędzaj 10h miesięcznie</strong> na
+                                    telefonach</li>
+                                <li class="flex items-center gap-2"><i data-lucide="check"
+                                        class="w-4 h-4 text-primary"></i> <strong>Jeden abonament</strong> zamiast
+                                    prowizji dla windykatora</li>
+                            </ul>
+                        </div>
+
+                        <a href="pages/fluinty-debt.html"
+                            class="inline-flex items-center gap-2 text-primary font-bold group-hover:gap-3 transition-all">
+                            Zobacz Więcej <i data-lucide="arrow-right" class="w-5 h-5"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Fluinty Fleet Manager -->
+                <div
+                    class="group relative bg-white rounded-3xl p-8 border border-gray-100 shadow-soft hover:shadow-lg transition-all overflow-hidden">
+                    <div class="absolute top-0 right-0 p-8 opacity-5 group-hover:opacity-10 transition-opacity">
+                        <i data-lucide="truck" class="w-32 h-32 text-accent"></i>
+                    </div>
+
+                    <div class="relative z-10">
+                        <div class="flex justify-between items-start mb-6">
+                            <div class="w-14 h-14 bg-accent/10 rounded-2xl flex items-center justify-center">
+                                <i data-lucide="truck" class="w-7 h-7 text-accent"></i>
+                            </div>
+                            <span
+                                class="px-3 py-1 bg-gray-100 text-gray-500 text-xs font-bold rounded-full uppercase tracking-wide">
+                                Wkrótce
+                            </span>
+                        </div>
+
+                        <h3 class="text-2xl font-bold text-text-main mb-3">FluintyFleet</h3>
+                        <p class="text-text-muted mb-8 leading-relaxed">
+                            Kompleksowe zarządzanie flotą pod ręką. Monitoruj koszty serwisowania, ubezpieczeń i paliwa
+                            w jednym, intuicyjnym dashboardzie.
+                            Zyskaj pełną kontrolę nad wydatkami firmowymi i optymalizuj koszty utrzymania pojazdów bez
+                            zbędnej biurokracji.
+                        </p>
+
+                        <span class="inline-flex items-center gap-2 text-gray-400 font-bold cursor-not-allowed">
+                            Coming Soon
+                        </span>
+                    </div>
                 </div>
             </div>
         </div>
