Add Privacy Policy page and footer link

--- a/index.html
+++ b/index.html
@@ -1323,7 +1323,11 @@
                     class="text-gray-400 hover:text-white transition-colors"><i data-lucide="linkedin"
                         class="w-5 h-5"></i></a>
             </div>
-            <p class="text-text-muted text-sm">&copy; 2026 Fluinty. Wszystkie prawa zastrzeżone.</p>
+            <div class="flex flex-col md:flex-row gap-6 items-center">
+                <a href="pages/privacypolicy.html"
+                    class="text-sm text-text-muted hover:text-primary transition-colors">Polityka Prywatności</a>
+                <p class="text-text-muted text-sm">&copy; 2026 Fluinty. Wszystkie prawa zastrzeżone.</p>
+            </div>
         </div>
         </div>
     </footer>
