--- a/pages/privacypolicy.html
+++ b/pages/privacypolicy.html
@@ -2,6 +2,15 @@
 <html lang="pl">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SZ9P7Y055L"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-SZ9P7Y055L');
+    </script>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>Polityka Prywatności - Fluinty</title>
