--- a/en/pages/case-study-viivaa.html
+++ b/en/pages/case-study-viivaa.html
@@ -2,6 +2,9 @@
 <html lang="pl" class="scroll-smooth">
 
 <head>
+    <!-- Cookiebot Consent Management -->
+    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="93a7f614-5248-4783-ab51-4cea7fc7d76e"
+        data-blockingmode="auto" type="text/javascript"></script>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-SZ9P7Y055L"></script>
     <script>
