update cookie bot

--- a/en/index.html
+++ b/en/index.html
@@ -10,6 +10,19 @@
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
+
+        // Google Consent Mode v2 - Default all to denied
+        gtag('consent', 'default', {
+            'ad_storage': 'denied',
+            'ad_user_data': 'denied',
+            'ad_personalization': 'denied',
+            'analytics_storage': 'denied',
+            'functionality_storage': 'denied',
+            'personalization_storage': 'denied',
+            'security_storage': 'granted',
+            'wait_for_update': 500
+        });
+
         gtag('js', new Date());
 
         gtag('config', 'G-SZ9P7Y055L');
