--- a/pages/case-study-eticod.html
+++ b/pages/case-study-eticod.html
@@ -4,7 +4,7 @@
 <head>
     <!-- Cookiebot Consent Management -->
     <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="93a7f614-5248-4783-ab51-4cea7fc7d76e"
-        data-blockingmode="auto" type="text/javascript"></script>
+        data-blockingmode="auto" type="text/javascript" async></script>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-SZ9P7Y055L"></script>
     <script>
