Sync English version: Update index, add Fluinty Debt & Privacy Policy pages, standardize footers

--- a/en/index.html
+++ b/en/index.html
@@ -90,12 +90,12 @@
 
             <!-- Desktop Menu -->
             <div class="hidden lg:flex items-center gap-8">
-                <a href="#problem"
-                    class="text-sm font-medium text-text-muted hover:text-primary transition-colors">Challenges</a>
-                <a href="#services"
-                    class="text-sm font-medium text-text-muted hover:text-primary transition-colors">Solutions</a>
+                <a href="#process"
+                    class="text-sm font-medium text-text-muted hover:text-primary transition-colors">Process</a>
                 <a href="#case-studies"
-                    class="text-sm font-medium text-text-muted hover:text-primary transition-colors">Portfolio</a>
+                    class="text-sm font-medium text-text-muted hover:text-primary transition-colors">Case Studies</a>
+                <a href="#tools"
+                    class="text-sm font-medium text-text-muted hover:text-primary transition-colors">Tools</a>
                 <a href="#pricing"
                     class="text-sm font-medium text-text-muted hover:text-primary transition-colors">Pricing</a>
                 <a href="../index.html" class="flex items-center gap-2 transition-transform hover:scale-110"
@@ -641,7 +641,7 @@
     </section>
 
     <!-- Process Section -->
-    <section class="py-24 relative">
+    <section id="process" class="py-24 relative">
         <div class="max-w-7xl mx-auto px-6">
             <div class="text-center mb-16">
                 <h2 class="text-3xl md:text-5xl font-display font-bold mb-6 text-text-main">How We Implement?</h2>
@@ -973,6 +973,135 @@
         </div>
     </section>
 
+    <!-- Our Tools Section -->
+    <section id="tools" class="py-24 bg-gray-50 border-t border-gray-100">
+        <div class="max-w-7xl mx-auto px-6">
+            <div class="text-center mb-16">
+                <h2 class="text-3xl md:text-5xl font-display font-bold mb-6 text-text-main">
+                    Our Tools
+                </h2>
+                <p class="text-text-muted max-w-2xl mx-auto">
+                    Specialized tools designed to automate your finances and operations.
+                </p>
+            </div>
+
+            <div class="grid md:grid-cols-2 gap-8">
+                <!-- FluintyDebt -->
+                <div
+                    class="group relative bg-white rounded-3xl p-10 border border-gray-100 shadow-soft hover:shadow-lg transition-all duration-300 overflow-hidden">
+                    <div
+                        class="absolute top-0 right-0 w-32 h-32 bg-primary/5 rounded-bl-[100px] transition-transform group-hover:scale-110">
+                    </div>
+
+                    <div class="relative z-10">
+                        <div
+                            class="w-14 h-14 bg-primary/10 rounded-2xl flex items-center justify-center mb-8 group-hover:scale-110 transition-transform duration-300">
+                            <i data-lucide="shield-check" class="w-7 h-7 text-primary"></i>
+                        </div>
+
+                        <h3 class="text-2xl font-bold text-text-main mb-4 flex items-center gap-3">
+                            FluintyDebt
+                            <span
+                                class="px-3 py-1 bg-green-100 text-green-700 text-xs font-bold rounded-full uppercase tracking-wider">Live</span>
+                        </h3>
+
+                        <p class="text-text-muted mb-8 leading-relaxed h-24">
+                            Turn stress into cash. FluintyDebt is your automatic financial liquidity guardian that works
+                            24/7 to ensure your invoices are paid on time.
+                        </p>
+
+                        <div class="space-y-4 mb-8">
+                            <div class="flex items-start gap-3">
+                                <div
+                                    class="w-6 h-6 rounded-full bg-green-50 flex items-center justify-center shrink-0 mt-0.5">
+                                    <i data-lucide="check" class="w-3 h-3 text-green-600"></i>
+                                </div>
+                                <span class="text-sm text-text-main">Recover receivables <span class="font-bold">40%
+                                        faster</span></span>
+                            </div>
+                            <div class="flex items-start gap-3">
+                                <div
+                                    class="w-6 h-6 rounded-full bg-green-50 flex items-center justify-center shrink-0 mt-0.5">
+                                    <i data-lucide="check" class="w-3 h-3 text-green-600"></i>
+                                </div>
+                                <span class="text-sm text-text-main">Save <span class="font-bold">10h monthly</span> on
+                                    phone calls</span>
+                            </div>
+                            <div class="flex items-start gap-3">
+                                <div
+                                    class="w-6 h-6 rounded-full bg-green-50 flex items-center justify-center shrink-0 mt-0.5">
+                                    <i data-lucide="check" class="w-3 h-3 text-green-600"></i>
+                                </div>
+                                <span class="text-sm text-text-main">One subscription instead of collector's
+                                    commission</span>
+                            </div>
+                        </div>
+
+                        <a href="pages/fluinty-debt.html"
+                            class="inline-flex items-center text-primary font-bold hover:gap-2 transition-all group-hover:text-primary/80">
+                            See More <i data-lucide="arrow-right" class="w-4 h-4 ml-1"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <!-- FluintyFleet -->
+                <div
+                    class="group relative bg-white rounded-3xl p-10 border border-gray-100 shadow-soft hover:shadow-lg transition-all duration-300 overflow-hidden opacity-70 hover:opacity-100">
+                    <div
+                        class="absolute top-0 right-0 w-32 h-32 bg-accent/5 rounded-bl-[100px] transition-transform group-hover:scale-110">
+                    </div>
+
+                    <div class="relative z-10">
+                        <div
+                            class="w-14 h-14 bg-accent/10 rounded-2xl flex items-center justify-center mb-8 group-hover:scale-110 transition-transform duration-300">
+                            <i data-lucide="car-taxi-front" class="w-7 h-7 text-accent"></i>
+                        </div>
+
+                        <h3 class="text-2xl font-bold text-text-main mb-4 flex items-center gap-3">
+                            FluintyFleet
+                            <span
+                                class="px-3 py-1 bg-gray-100 text-gray-500 text-xs font-bold rounded-full uppercase tracking-wider">Coming
+                                Soon</span>
+                        </h3>
+
+                        <p class="text-text-muted mb-8 leading-relaxed h-24">
+                            Comprehensive fleet management at hand. Monitor service, insurance, and fuel costs in one
+                            intuitive dashboard. Gain full control over expenses.
+                        </p>
+
+                        <div class="space-y-4 mb-8">
+                            <div class="flex items-start gap-3">
+                                <div
+                                    class="w-6 h-6 rounded-full bg-gray-50 flex items-center justify-center shrink-0 mt-0.5">
+                                    <i data-lucide="lock" class="w-3 h-3 text-gray-400"></i>
+                                </div>
+                                <span class="text-sm text-text-main">Cost control</span>
+                            </div>
+                            <div class="flex items-start gap-3">
+                                <div
+                                    class="w-6 h-6 rounded-full bg-gray-50 flex items-center justify-center shrink-0 mt-0.5">
+                                    <i data-lucide="lock" class="w-3 h-3 text-gray-400"></i>
+                                </div>
+                                <span class="text-sm text-text-main">Service alerts</span>
+                            </div>
+                            <div class="flex items-start gap-3">
+                                <div
+                                    class="w-6 h-6 rounded-full bg-gray-50 flex items-center justify-center shrink-0 mt-0.5">
+                                    <i data-lucide="lock" class="w-3 h-3 text-gray-400"></i>
+                                </div>
+                                <span class="text-sm text-text-main">Fuel analysis</span>
+                            </div>
+                        </div>
+
+                        <button disabled class="inline-flex items-center text-gray-400 font-bold cursor-not-allowed">
+                            Coming Soon <i data-lucide="lock" class="w-4 h-4 ml-2"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Pricing Section -->
     <section id="pricing" class="py-24 bg-gray-50">
         <div class="max-w-7xl mx-auto px-6">
@@ -1213,7 +1342,9 @@
             <div class="text-center md:text-left">
                 <a href="#"
                     class="text-2xl font-display font-bold tracking-tighter bg-clip-text text-transparent bg-gradient-to-r from-primary to-accent">fluinty.</a>
-                <p class="text-gray-500 text-sm mt-2">Automation of the future.</p>
+
+                <p class="text-gray-500 text-sm mt-2">We automate the future of finance for SMEs, restoring peace of
+                    mind and financial liquidity.</p>
             </div>
             <div class="flex gap-6">
                 <a href="https://www.linkedin.com/company/fluinty/" target="_blank" rel="noopener noreferrer"
@@ -1221,7 +1352,7 @@
                         class="w-5 h-5"></i></a>
             </div>
             <div class="text-gray-500 text-sm">
-                &copy; 2025 Fluinty. All rights reserved.
+                &copy; 2026 Fluinty. All rights reserved.
             </div>
         </div>
     </footer>
