--- a/index.html
+++ b/index.html
@@ -1316,7 +1316,8 @@
             <div class="text-center md:text-left">
                 <a href="#"
                     class="text-2xl font-display font-bold tracking-tighter bg-clip-text text-transparent bg-gradient-to-r from-primary to-accent">fluinty.</a>
-                <p class="text-gray-500 text-sm mt-2">Automatyzacja przyszłości.</p>
+                <p class="text-gray-500 text-sm mt-2">Automatyzujemy przyszłość finansów dla MŚP, przywracając spokój i
+                    płynność finansową.</p>
             </div>
             <div class="flex gap-6">
                 <a href="https://www.linkedin.com/company/fluinty/" target="_blank" rel="noopener noreferrer"
