--- a/en/index.html
+++ b/en/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl" class="scroll-smooth">
+<html lang="en" class="scroll-smooth">
 
 <head>
     <!-- Cookiebot Consent Management -->
