--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <script src="https://unpkg.com/lucide@latest"></script>
 
     <!-- Tailwind CDN -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com" data-cookieconsent="ignore"></script>
     <script>
         tailwind.config = {
             darkMode: 'class',
@@ -127,7 +127,8 @@
                     class="text-sm font-medium text-text-muted hover:text-primary transition-colors">Cennik</a>
                 <a href="en/index.html" class="flex items-center gap-2 transition-transform hover:scale-110"
                     aria-label="Switch to English">
-                    <img src="assets/flags/en.svg" alt="EN" class="w-6 h-auto rounded-sm shadow-sm">
+                    <img src="assets/flags/en.svg" alt="EN" width="24" height="18"
+                        class="w-6 h-auto rounded-sm shadow-sm">
                 </a>
                 <a href="http://localhost:3000"
                     class="px-6 py-2.5 rounded-full bg-primary/10 border border-primary/20 text-primary-text hover:bg-primary hover:text-white transition-all duration-300 font-medium text-sm glow-effect">
