Fix: Sync English menu with Polish version (add Challenges, Solutions, Tools)

--- a/en/index.html
+++ b/en/index.html
@@ -115,8 +115,10 @@
 
             <!-- Desktop Menu -->
             <div class="hidden lg:flex items-center gap-8">
-                <a href="#process"
-                    class="text-sm font-medium text-text-muted hover:text-primary transition-colors">Process</a>
+                <a href="#problem"
+                    class="text-sm font-medium text-text-muted hover:text-primary transition-colors">Challenges</a>
+                <a href="#services"
+                    class="text-sm font-medium text-text-muted hover:text-primary transition-colors">Solutions</a>
                 <a href="#case-studies"
                     class="text-sm font-medium text-text-muted hover:text-primary transition-colors">Case Studies</a>
                 <a href="#tools"
@@ -149,7 +151,8 @@
         </button>
         <a href="#problem" class="mobile-link text-2xl font-display font-medium text-text-main">Challenges</a>
         <a href="#services" class="mobile-link text-2xl font-display font-medium text-text-main">Solutions</a>
-        <a href="#case-studies" class="mobile-link text-2xl font-display font-medium text-text-main">Portfolio</a>
+        <a href="#case-studies" class="mobile-link text-2xl font-display font-medium text-text-main">Case Studies</a>
+        <a href="#tools" class="mobile-link text-2xl font-display font-medium text-text-main">Tools</a>
         <a href="#pricing" class="mobile-link text-2xl font-display font-medium text-text-main">Pricing</a>
         <a href="../index.html"
             class="mobile-link flex items-center gap-2 text-text-muted hover:text-primary transition-colors">
