Add FleetParts Dashboard landing page (PL) and update homepage link

--- a/index.html
+++ b/index.html
@@ -1074,14 +1074,8 @@
                     </div>
 
                     <div class="relative z-10">
-                        <div class="flex justify-between items-start mb-6">
-                            <div class="w-14 h-14 bg-accent/10 rounded-2xl flex items-center justify-center">
-                                <i data-lucide="truck" class="w-7 h-7 text-accent"></i>
-                            </div>
-                            <span
-                                class="px-3 py-1 bg-gray-100 text-gray-500 text-xs font-bold rounded-full uppercase tracking-wide">
-                                Wkrótce
-                            </span>
+                        <div class="w-14 h-14 bg-accent/10 rounded-2xl flex items-center justify-center mb-6">
+                            <i data-lucide="truck" class="w-7 h-7 text-accent"></i>
                         </div>
 
                         <h3 class="text-2xl font-bold text-text-main mb-3">FluintyFleet</h3>
@@ -1092,9 +1086,10 @@
                             zbędnej biurokracji.
                         </p>
 
-                        <span class="inline-flex items-center gap-2 text-gray-400 font-bold cursor-not-allowed">
-                            Coming Soon
-                        </span>
+                        <a href="pages/fluinty-fleet.html"
+                            class="inline-flex items-center gap-2 text-primary font-bold group-hover:gap-3 transition-all">
+                            Zobacz Więcej <i data-lucide="arrow-right" class="w-5 h-5"></i>
+                        </a>
                     </div>
                 </div>
             </div>
